
message AudioFileInfoDto {
   required int32 FileId = 1;
   required string Caption = 2;
   required uint32 LengthInSeconds = 3;
   required string Format = 4;
}
message AudioFileListRqDto {
   required uint32 UserId = 1;
   optional string SharedSandboxId = 2;
}
message AudioFileListRsDto {
   required bool IsSuccess = 1;
   repeated DtoValidationError ErrorList = 2;
   repeated AudioFileInfoDto Files = 3;
}
message BounceCounterRqDto {
}
message BounceCounterRsDto {
   required bool IsSuccess = 1;
   repeated DtoValidationError ErrorList = 2;
   optional int32 Value = 3;
}
message CartOfferRqDto {
   optional int32 ReferralId = 1 [default = 0];
   repeated ProductInfoProto Products = 2;
}
message CartOfferRsDto {
   required bool IsSuccess = 1;
   repeated DtoValidationError ErrorList = 2;
   required MarketingProgramProto Offer = 3;
}
message CreateAudioFileRqDto {
   required AudioFileInfoDto FileInfo = 1;
}
message CreateAudioFileRsDto {
   required bool IsSuccess = 1;
   repeated DtoValidationError ErrorList = 2;
   optional AudioFileInfoDto FileInfo = 3;
}
message CreatePresetRqDto {
   required string Caption = 2;
}
message CreatePresetRsDto {
   repeated DtoValidationError ErrorList = 1;
   required bool IsSuccess = 2;
   required int32 FileId = 3;
}
message DeletePresetRqDto {
   required int32 FileId = 3;
}
message DeletePresetRsDto {
   repeated DtoValidationError ErrorList = 1;
   required bool IsSuccess = 2;
}
message DtoValidationError {
   optional string Error = 1;
   repeated string FieldList = 2;
}
message MarketingProgramProto {
   required string Id = 1;
   repeated ProductOfferProto ProductList = 2;
   optional int32 ReferralId = 3 [default = 0];
}

message PresetFileInfoRqDto {
   required string PresetId = 1;
}
message PresetFileInfoRsDto {
   required bool IsSuccess = 1;
   repeated DtoValidationError ErrorList = 2;
   required UserPresetDto Preset = 3;
}
message ProductInfoProto {
   required string Id = 1;
   optional uint32 Price = 2;
}
message ProductOfferProto {
   required ProductInfoProto Product = 1;
   optional uint32 CutOffPercent = 2;
   optional int32 CutOffFlat = 3;
}
message StorageLimitsRqDto {
}
message StorageLimitsRsDto {
   required bool IsSuccess = 1;
   repeated DtoValidationError ErrorList = 2;
   optional uint32 SpaceUsedInBytes = 3;
   optional uint32 SpaceLeftInBytes = 4;
   optional uint32 SpaceTotalInBytes = 5;
}
message TimezoneDto {
   required int32 DatetimeUtcOffset = 1;
}
message UserPresetDto {
   required int32 Id = 1;
   required int32 UserId = 2;
   required string CreatedOn = 3;
   required string Caption = 4;
   required string PresetId = 5;
}
message UserPresetsListRqDto {
   required TimezoneDto Timezone = 1;
}
message UserPresetsListRsDto {
   repeated DtoValidationError ErrorList = 1;
   required bool IsSuccess = 2;
   repeated UserPresetDto UserPresets = 3;
}

