import "ProductSandbox.proto";

message AudioFileChangeProto
{
	required int32 FileId = 1;
	optional float Volume = 2;
	optional bool FxFlag = 3;
	optional bool BackgroundFlag = 4;
}

message GpuServerLoadInformationProto
{
	required float GpuServerLoad = 1;
	required int32 GpuServerConnectedClients = 2;
	required float GpuServerPingInMs = 3;
}

message MixdownProgressProto
{
	required float CurrentProgress = 1;
	required float TotalToProcess = 2;
}

// Top level message that would be send through socket
message SandboxPageSocketProto
{
	optional bytes OutputAudioStream = 1;
	optional MixdownProgressProto MixdownProgress = 2;
	optional AudioFileChangeProto AudioFileChange = 3;
	optional GpuServerLoadInformationProto GpuServerLoad = 4;
	optional CartOfferRsDto CartOffer = 5; // Defined in sandbox-ui protocol
}
